2003-04-09  Steffen Macke <sdteffen@web.de>

	* doc/en/*.sgml: removed files
	* doc/en/*.xml: added files
	* doc/en/Makefile.am: switched to XML DocBook

2003-04-09  Lars Clausen  <lrclause@cs.uiuc.edu>

	* plug-ins/xslt/xslt.c (dia_plugin_init): 
	* configure.in: Added --with-xslt-prefix to allow other XSLT
	placements than /usr/lib.

2003-04-09  Steffen Macke <sdteffen@web.de>

	* lib/makefile.mingw: updated to include latest files, including 
	and linking libintl
	* lib/geometry.h: don't define isinf and finite for mingw gcc build

2003-04-08  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/persistence.h:
	* app/persistence.c (persistence_register_window_create): 
	* app/app_procs.c (app_init): 
	Register window function that doesn't create the window unless it
	should be open.  Other windows should move to this, so startup
	speed can be reduced.
	
	* app/persistence.h: Removed call prototype for update_window, now
	done internally.
	* app/persistence.c (persistence_register_window): A number of
	fixes.  Doesn't forget position when window is closed.  Now
	actually loads prefs.

	* app/layer_dialog.c (create_layer_dialog): Removed extraneous
	event connect.

	* app/preferences.c (prefs_data): 
	* app/diagram_tree_window.h: 
	* app/diagram_tree_window.c: Added persistence registering.
	Removed prefs items storing size and openness. 

	* app/sheets_dialog.c (create_sheets_main_dialog): Added
	persistence registering.  

	* app/Makefile.am (dia_core_files): Added persistence files.

	* lib/dia_dirs.h: 
	* lib/dia_dirs.c (dia_config_ensure_dir): New function to ensure
	that dirs are present.

	* app/app_procs.c (app_init): Loads persistent values on startup.
	(app_exit): Saves persistent values on exit.

	* app/layer_dialog.c (create_layer_dialog): Registers the layer
	window for persistence.

	* app/persistence.[ch]: New files handling various kinds of
	persistence.

2003-04-04  Lars Clausen  <lrclause@cs.uiuc.edu>
