@@ -1,3 +1,10 @@
+2003-04-10  Lars Clausen  <lrclause@cs.uiuc.edu>
+
+	* app/app_procs.c (app_init): Layer window now opened at startup
+	only if needed.
+
+	* lib/prop_widgets.c: Show labels on ListProp.
+
 2003-04-09  Steffen Macke <sdteffen@web.de>
 
 	* doc/en/*.sgml: removed files
